# teller_discord_bot

./: .gitignore  .pre-commit-config.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: lint.yml  pr_template.yml
discord/: .env  README.md  main.py  pyproject.toml
discord/src/discord/: __init__.py
discord/src/libs/: log_init.py
